force-app/main/default/objects/Account/fields/Academic_Band__c.field-meta.xml
<CustomField>
    <fullName>Academic_Band__c</fullName>
    <label>Academic Band</label>
    <length>1</length>
    <type>Text</type>
</CustomField>