force-app/main/default/objects/Account/fields/Academic_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Academic_Rate_Code__c</fullName>
    <label>Academic Rate Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>