force-app/main/default/objects/Account/fields/Academic_Size__c.field-meta.xml
<CustomField>
    <fullName>Academic_Size__c</fullName>
    <label>Academic Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>