force-app/main/default/objects/Account/fields/Academic_Type__c.field-meta.xml
<CustomField>
    <fullName>Academic_Type__c</fullName>
    <label>Academic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic HE &amp; FE (FTE)</fullName>
            </value>
            <value>
                <fullName>Public Library (Population Served)</fullName>
            </value>
            <value>
                <fullName>Commercial &amp; Not-For-Profit (Staff with access)</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>