force-app/main/default/objects/Account/fields/Advantage_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Advantage_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Advantage Customer Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>