force-app/main/default/objects/Account/fields/AMS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>AMS_Account_Number__c</fullName>
    <label>AMS Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>