force-app/main/default/objects/Account/fields/AMS_Link__c.field-meta.xml
<CustomField>
    <fullName>AMS_Link__c</fullName>
    <formula>IF( ISBLANK(AMS_Account_Number__c),&#39;&#39;, &#39;https://ams.oup.com/account/?pf_id=&#39; &amp; AMS_Account_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Links to the AMS website using the AMS Account Number. If AMS Account Number is blank, this field is blank as well.</inlineHelpText>
    <label>AMS Link</label>
    <type>Text</type>
</CustomField>