force-app/main/default/objects/Account/fields/JISC_Band__c.field-meta.xml
<CustomField>
    <fullName>JISC_Band__c</fullName>
    <label>JISC Band</label>
    <length>2</length>
    <type>Text</type>
</CustomField>