force-app/main/default/objects/Account/fields/Law_Band__c.field-meta.xml
<CustomField>
    <fullName>Law_Band__c</fullName>
    <label>Law Band</label>
    <length>1</length>
    <type>Text</type>
</CustomField>