force-app/main/default/objects/Account/fields/Law_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Law_Rate_Code__c</fullName>
    <label>Law Rate Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>