force-app/main/default/objects/Account/fields/Law_Size__c.field-meta.xml
<CustomField>
    <fullName>Law_Size__c</fullName>
    <label>Law Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>