force-app/main/default/objects/Account/fields/Law_Type__c.field-meta.xml
<CustomField>
    <fullName>Law_Type__c</fullName>
    <label>Law Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Law Schools/Law Faculty (Full Time Professors/Lecturers)</fullName>
            </value>
            <value>
                <fullName>Law firms (# of Partners)</fullName>
            </value>
            <value>
                <fullName>UK Bar (Members Using Resource)</fullName>
            </value>
            <value>
                <fullName>Govt/State Depts (# of Lawyers)</fullName>
            </value>
            <value>
                <fullName>NGO&#39;s/Charities</fullName>
            </value>
            <value>
                <fullName>HE/FE (FTE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>