force-app/main/default/objects/Account/fields/LS_Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>LS_Sales_Territory__c</fullName>
    <label>LS Sales Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>