force-app/main/default/objects/Account/fields/Medical_Band__c.field-meta.xml
<CustomField>
    <fullName>Medical_Band__c</fullName>
    <label>Medical Band</label>
    <length>1</length>
    <type>Text</type>
</CustomField>