force-app/main/default/objects/Account/fields/Medical_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Medical_Rate_Code__c</fullName>
    <label>Medical Rate Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>