force-app/main/default/objects/Account/fields/Medical_Size__c.field-meta.xml
<CustomField>
    <fullName>Medical_Size__c</fullName>
    <label>Medical Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>