force-app/main/default/objects/Account/fields/Medical_Type__c.field-meta.xml
<CustomField>
    <fullName>Medical_Type__c</fullName>
    <label>Medical Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic - HE &amp; FE (Faculty FTE)</fullName>
            </value>
            <value>
                <fullName>Commercial (# of users)</fullName>
            </value>
            <value>
                <fullName>Hospitals &amp; Not-For-Profit (# of users)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>