force-app/main/default/objects/Account/fields/New_Business_Disc_Percentage__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Disc_Percentage__c</fullName>
    <label>New Business Disc Percentage</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>