force-app/main/default/objects/Account/fields/Renewal_Disc_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Disc_Percentage__c</fullName>
    <label>Renewal Disc Percentage</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>