force-app/main/default/objects/Account/fields/Ringgold_Id__c.field-meta.xml
<CustomField>
    <fullName>Ringgold_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ringgold Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>