force-app/main/default/objects/Account/fields/Ringgold_Type__c.field-meta.xml
<CustomField>
    <fullName>Ringgold_Type__c</fullName>
    <label>Ringgold Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>