force-app/main/default/objects/Account/fields/SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SAP Customer Number</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>