force-app/main/default/objects/Account/fields/Size_Type__c.field-meta.xml
<CustomField>
    <fullName>Size_Type__c</fullName>
    <label>Size Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>