force-app/main/default/objects/Account/fields/Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number__c</fullName>
    <label>Tax Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>