force-app/main/default/objects/Account/recordTypes/Consortium_Network.recordType-meta.xml
<RecordType>
    <fullName>Consortium_Network</fullName>
    <active>true</active>
    <description>A Consortium or Network Account</description>
    <label>Consortium/Network</label>
</RecordType>