force-app/main/default/objects/Account/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <description>An Individual Account</description>
    <label>Individual</label>
</RecordType>