force-app/main/default/objects/Account/validationRules/Size_Type_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Size_Type_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Size_Type__c, &quot;&quot;) &amp;&amp; NOT(ISBLANK(Size__c))</errorConditionFormula>
    <errorDisplayField>Size__c</errorDisplayField>
    <errorMessage>Size Type needs to be populated</errorMessage>
</ValidationRule>